--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 {% load static %}
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+        <link rel="stylesheet", href="{% static "css/styles.css" %}">
         <title>PillMe | {% block page_title %}{% endblock page_title %}</title>
     </head>
 
