--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,23 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <link rel="stylesheet", href="{% static "css/styles.css" %}">
+        <!--nav-->
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+        <!--nav-->
+        <!--image preview-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="{% static "js/preview.js" %}"></script>
+        <!--image preview-->
         <title>PillMe | {% block page_title %}{% endblock page_title %}</title>
     </head>
 
     <body>
     {% include "partials/nav.html" %}
-    {% block content %}
-    {% endblock content %}
+    <div class="w-full h-20 opacity-0"></div>
+    <div class="mx-10">
+        {% block content %}
+        {% endblock content %}
+    </div>
     </body>
 
 </html>
