--- a/templates/pills/detail.html
+++ b/templates/pills/detail.html
@@ -16,8 +16,18 @@
     <p>{{pill.created}}</p>
 </div>
 
-{% if not pill.user %}
-    <a href="{% url 'pills:add' pk=pill.pk %}" class="btn">인벤토리 추가</a>
+{% if user.is_authenticated %}
+<div class="my-4 w-full">
+    {% if not pill.user %}
+    <a href="{% url 'pills:add' pk=pill.pk %}">
+        <div class="btn md:w-64">인벤토리 추가</div>
+    </a>
+    {% else %}
+    <a href="{% url 'pills:delete' pk=pill.pk %}">
+        <div class="btn md:w-64 bg-red-300">인벤토리 삭제</div>
+    </a>
+    {% endif %}
+</div>
 {% endif %}
 
 
