--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     </head>
 
     <body>
+        {% include "partials/message.html" %}
         {% include "partials/nav.html" %}
         <div class="w-full h-20 opacity-0"></div>
         <div class="mx-10">
