--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,7 +3,7 @@
   <div @click.away="open = false" class="flex flex-col md:flex-row w-full text-gray-700 bg-white flex-shrink-0 shadow-md border rounded-b-lg" x-data="{ open: false }">
     <div class="flex-shrink-0 px-8 py-2 flex flex-row items-center justify-between">
       
-      <a href="{% url 'core:home' %}" class="w-full">
+      <a href="{% url 'core:home' %}">
         <img class="duration-300 h-12" src="{% static 'img/logo.png' %}" />
       </a>
 
