--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 
 .btn{
-    @apply bg-indigo-300 rounded-full px-4 py-2 text-center w-full;
+    @apply duration-300 transform scale-100 bg-indigo-300 rounded-full px-4 py-2 text-center w-full;
 }
 
 .login-btn {
