--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -34,13 +34,13 @@
       <!--Login, Logout-->
       <div class="relative md:ml-10 md:w-32 z-0 md:mr-6">
       {% if user.is_authenticated %}
-        <a href="#"
+        <a href="{% url 'users:logout' %}"
           class="login-btn md:mt-0 focus:outline-none focus:shadow-outline hover:bg-red-700 focus:bg-red-700 bg-red-500">
           <i class="fa fa-sign-out-alt flex items-center transform scale-125"></i>
           <span class="ml-2">Logout</span>
         </a>
       {% else %}
-        <a href="#"
+        <a href="{% url 'users:login' %}"
           class="login-btn md:mt-0 focus:outline-none focus:shadow-outline hover:bg-green-700 focus:bg-green-700 bg-green-500">
           <i class="fa fa-sign-in-alt flex items-center transform scale-125"></i>
           <span class="ml-2">Login</span>
@@ -52,3 +52,7 @@
     </nav>
   </div>
 </div>
+
+<!--nav-->
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+<!--nav-->
