--- a/templates/pills/detail.html
+++ b/templates/pills/detail.html
@@ -8,8 +8,8 @@
 
 <section class="text-gray-700 body-font">
     <div class="container mx-auto flex px-5 py-10 flex-col items-center">
-        <div class="flex flex-col md:flex-row w-full md:justify-between">
-            <img class="w-full md:w-1/3 rounded-lg shadow-md" src="{{pill.image.url}}">
+        <div class="flex flex-col md:flex-row w-full md:justify-between md:h-64">
+            <img class="w-full md:w-1/3 rounded-lg shadow-md md:max-h-full" src="{{pill.image.url}}">
 
             <div class="mt-5 md:mt-0 ml-0 md:ml-5 bg-gray-300 rounded-lg w-full md:w-2/3 py-4 md:px-10 px-4 flex items-center shadow-md">
                 <table class="w-full text-left">
