메인 페이지 디자인 수정, 모달 추가

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -44,4 +44,12 @@
     }
   }
 
+  .modal {
+    transition: opacity 0.25s ease;
+  }
+  body.modal-active {
+    overflow-x: hidden;
+    overflow-y: visible !important;
+  }
+
 @tailwind utilities;
