--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <link rel="stylesheet", href="{% static "css/styles.css" %}">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>PillMe | {% block page_title %}{% endblock page_title %}</title>
     </head>
 
