로그인 페이지 랜덤 이미지, 메인페이지에 소개글 추가

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,13 +9,15 @@
 
 <section class="py-6 mt-20">
   <div class="flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-4xl">
-        <div class="hidden lg:block lg:w-1/2 bg-cover" style="background-image:url('https://images.unsplash.com/photo-1523245716197-c02cd9901537?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60')"></div>
+        <div id="bg-img" class="hidden lg:block lg:w-1/2 bg-cover"></div>
         <div class="w-full p-8 lg:w-1/2">
         <form method="POST" class="w-full" enctype="multipart/form-data">
         {% csrf_token %}
-            <h2 class="text-2xl font-semibold text-gray-700 text-center pointer-events-none">PillMe</h2>
+            <div class="flex justify-center w-full">
+                <img class="duration-300 h-12" src="{% static 'img/logo.png' %}" />
+            </div>
             <p class="text-xl text-gray-600 text-center pointer-events-none">Welcome back!</p>
-            <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
+            <a href="#" class="duration-300 flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-200">
                 <div class="px-4 py-3">
                     <svg class="h-6 w-6" viewBox="0 0 40 40">
                         <path d="M36.3425 16.7358H35V16.6667H20V23.3333H29.4192C28.045 27.2142 24.3525 30 20 30C14.4775 30 10 25.5225 10 20C10 14.4775 14.4775 9.99999 20 9.99999C22.5492 9.99999 24.8683 10.9617 26.6342 12.5325L31.3483 7.81833C28.3717 5.04416 24.39 3.33333 20 3.33333C10.7958 3.33333 3.33335 10.7958 3.33335 20C3.33335 29.2042 10.7958 36.6667 20 36.6667C29.2042 36.6667 36.6667 29.2042 36.6667 20C36.6667 18.8825 36.5517 17.7917 36.3425 16.7358Z" fill="#FFC107"/>
@@ -43,19 +45,21 @@
                 {% endif %}
             </div>
             {% endfor %}
-            <a href="#" class="text-xs text-gray-500">Forget Password?</a>
+            <a href="#" class="duration-300 text-xs text-gray-500 hover:text-red-500">Forget Password?</a>
 
             <div class="mt-8">
-                <button class="bg-indigo-500 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Login</button>
+                <button class="duration-500 bg-indigo-500 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600 shadow-md">Login</button>
             </div>
-            <div class="mt-4 flex items-center justify-between">
+            <div class="mt-4 flex items-center justify-between duration-300 hover:border-indigo-600">
                 <span class="border-b w-1/5 md:w-1/4"></span>
-                <a href="#" class="text-xs text-gray-500 uppercase">or sign up</a>
+                <a href="#" class="duration-300 text-xs text-gray-500 hover:text-indigo-600 uppercase">or sign up</a>
                 <span class="border-b w-1/5 md:w-1/4"></span>
             </div>
         </form>
         </div>
     </div>
 </section>
+
+<script src="{% static "js/random_image.js" %}"></script>
 
 {% endblock content %}
